--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,32 +6,121 @@
 @import "base/general";
 @import "../blocks/modules";
 
+$light-color:#fff;
+$accietn-color:#65e496;
+
+
+
 body{
     font-family: 'Roboto Slab', serif;
+}
+
+.wrap{
+    max-width: 1170px;
+    margin: 0 auto;
 }
 
 .page-main{
     background-image: url(../img/bg-main.png);
     background-repeat: no-repeat;
     background-size: cover;
+    color:$light-color;
+    padding-bottom: 50px;
 }
 
 .header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 1170px;
+    margin: 0 auto;
+    padding-top: 38px;
+    padding-bottom: 166px;
     &__logo {
         display: block;
         width: 137px;
         height: 28px;
         background-image: url(../img/Logo.svg);
     }
-    &-list{
+    &-list {
         list-style-type: none;
         display: flex;
         justify-content: flex-end;
-        &__item{
-            margin-left: 15px;
+        font-family: 'Open sans', serif;
+        &__item {
+            margin-left: 22px;
+            padding-bottom: 5px;
+            border-bottom: 3px solid transparent;
+            transition: 0.3s;
+            &:hover {
+                border-bottom: 3px solid $accietn-color;
+            }  
         }
+        &__item.active {
+            border-bottom: 3px solid $accietn-color;
+            
+        }
+        &__link {
+            color: $light-color;
+            text-decoration: none;
+            letter-spacing: 0.5px   ;
+        }
+    }
+}
+
+.block-text {
+    flex-basis: calc(93% - 500px);
+    &__name {
+        font-family: 'Open sans', serif,;
+        font-size: 18px;
+        letter-spacing: 0.7px;
+        margin-bottom: 30px;
+    }
+    &__title {
+        font-size: 48px;
+        font-weight: 700;
+        letter-spacing: 1.8px;
+        margin-bottom: 40px;
+        span {
+            display: block; 
+            color: $accietn-color;
+            font-size: 18px;
+            margin-top: 9px;
+            letter-spacing: 0.9px;
+        }
+    }
+    &__description {
+        font-family: 'Open sans', serif;
+        font-size: 15px;
+        line-height: 25px;
+        margin-bottom: 24px;
+        letter-spacing: 0.7px;
+    }
+    &__btn {
+        display: block;
+        background-color: $accietn-color;
+        color: #fff;
+        text-decoration: none;
+        max-width: 250px;
+        border-radius: 3px;
+        text-align: center;
+        font-size: 18px;
+        margin-top: 48px;
+        padding: 14px 0;
+        letter-spacing: 0.7px;
+        margin-bottom: 19px;
+    }
+}
+
+.block-book{
+    display: flex;
+    justify-content: flex-start;
+    &-demo{
+        display: block;
+        width: 447px;
+        height: 643px;
+        background-image: url(../img/book.svg);
+        background-repeat: no-repeat;
+        flex-basis: 447px;
     }
 }
