--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,11 +8,20 @@
 
 $light-color:#fff;
 $accietn-color:#65e496;
+$bg-light-color:#f5f6fa;
+$bg-dark-color:#44444f;
 
 
 
 body{
     font-family: 'Roboto Slab', serif;
+    font-size: 15px;
+    line-height: 24px;
+    color: $bg-dark-color;
+}
+
+h3{
+    font-size: 24px;
 }
 
 .wrap{
@@ -26,6 +35,44 @@ body{
     background-size: cover;
     color:$light-color;
     padding-bottom: 50px;
+}
+
+.page{
+    padding-top: 161px;
+    padding-bottom: 160px;
+    &_grey{
+        background-color: $bg-light-color;
+    }
+    &__title{
+        font-size: 48px;
+        text-align: center;
+        margin-bottom: 25px;
+        letter-spacing: 2px;
+    
+    }
+    &-subtitle{
+        color:$accietn-color;
+        text-align: center;
+        font-size: 18px;
+        letter-spacing: 0.9px;
+    }
+        &__btn{
+        display: block;
+        width: 180px;
+        margin: 0 auto;
+        background: linear-gradient(to top left, #65e49c, #65e4af);
+        border: none;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 3px;
+        text-align: center;
+        font-size: 18px;
+        margin-top: 28px;
+        padding: 14px 45px;
+        letter-spacing: 0.7px;
+        position: relative;
+        box-shadow: 0 -2px #b2f1be inset;
+    }
 }
 
 .header{
@@ -70,22 +117,27 @@ body{
 
 .block-text {
     flex-basis: calc(93% - 500px);
+    margin-left: 93px;
     &__name {
         font-family: 'Open sans', serif,;
         font-size: 18px;
         letter-spacing: 0.7px;
-        margin-bottom: 30px;
+        margin-bottom: 36px;
+    }
+    &__name_top{
+        margin-top: 0px;
+        margin-left: 0px;
     }
     &__title {
         font-size: 48px;
         font-weight: 700;
         letter-spacing: 1.8px;
-        margin-bottom: 40px;
+        margin-bottom: 32px;
         span {
-            display: block; 
-            color: $accietn-color;
+            display: block;
+            color: #65e496;
             font-size: 18px;
-            margin-top: 9px;
+            margin-top: 21px;
             letter-spacing: 0.9px;
         }
     }
@@ -94,11 +146,11 @@ body{
         font-size: 15px;
         line-height: 25px;
         margin-bottom: 24px;
-        letter-spacing: 0.7px;
+        letter-spacing: 0.75px;
     }
     &__btn {
         display: block;
-        background-color: $accietn-color;
+        background: linear-gradient(to top left, #65e49c, #65e4af);
         color: #fff;
         text-decoration: none;
         max-width: 250px;
@@ -109,6 +161,51 @@ body{
         padding: 14px 0;
         letter-spacing: 0.7px;
         margin-bottom: 19px;
+        box-shadow: 0 -2px #59bb88 inset;
+        &_light{
+            display: block;
+            background: linear-gradient(to top left, #65e49c, #65e4af);
+            color: #fff;
+            text-decoration: none;
+            max-width: 250px;
+            border-radius: 3px;
+            text-align: center;
+            font-size: 18px;
+            margin-top: 48px;
+            padding: 14px 0;
+            letter-spacing: 0.7px;
+            margin-bottom: 19px;
+            box-shadow: 0 -2px #b2f1be inset;
+        }
+    }
+    small{
+        font-style: italic;
+    }
+    &-item{
+        &__date{
+            margin-bottom: 1px;
+            font-size: 15px;
+            font-family: 'Open Sans', sans-serif;
+        }
+        &__title{
+            font-size: 18px;
+        }
+        &__desc{
+            font-size: 15px;
+            font-family: 'Open Sans', sans-serif;
+        }
+        &__btn{
+            background: linear-gradient(to top left, #65e49c, #65e4af);
+            color: #fff;
+            font-size: 16px;
+            display: inline-block;
+            text-align: center;
+            text-decoration: none;
+            padding: 15px 49px;
+            border: none;
+            margin-top: 35px;
+            box-shadow: 0 -2px #b2f1be inset;
+        }
     }
 }
 
@@ -122,5 +219,269 @@ body{
         background-image: url(../img/book.svg);
         background-repeat: no-repeat;
         flex-basis: 447px;
+        position: relative;
+        &__title{
+            font-size: 36px;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            position: absolute;
+            right: 135px;
+            top: 122px;
+            span{   
+                font-family:'Open Sans', serif;
+                font-size: 14px;
+                color: $accietn-color;
+                display: block;
+                text-transform: initial;
+            }
+        }
+        &__author{
+            font-family:'Open Sans', serif;
+            font-size: 14px;
+            color: $accietn-color; 
+            position: absolute;
+            bottom: 52px;
+            left: 87px;
+            letter-spacing: 0.7px;
+        }  
     }
 }
+
+.block-author{
+    display: flex;
+    justify-content: space-between;
+}
+
+.block-ava{
+    position: relative;
+    &__svg{
+        position: absolute;
+        z-index: -1;
+        right: 0;
+    }
+    &__svg--left{
+        right: inherit;
+        left: 0;
+    }
+    &__img{
+        margin-top: 47px;
+        margin-right: 44px;
+    }
+    &__img--left{
+        margin-top: 49px;
+        margin-left: 51px;
+        margin-right: 0;
+    }   
+}
+
+.block-counter{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 152px;
+    p{
+        font-family: 'Open Sans', serif;
+        text-align: center ;
+        font-size: 18px;
+        span{
+            font-family: 'Roboto Slab', serif;
+            display: block;
+            font-weight: 100;
+            font-size: 80px;
+            color: $accietn-color;
+            margin-bottom: 45px;
+        }
+    }
+}
+.block-about{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 82px;
+    h3{
+        margin-bottom: 20px;
+        letter-spacing: 1.2px;
+    }
+  
+    &-text{
+        flex-basis: 41%;
+        &__desc{
+            font-family: 'Open Sans', serif;
+            letter-spacing: 0.6px;
+        }
+    }
+    &-social{
+        display: flex;
+        align-items: center;
+        &__title{
+            font-family: 'Roboto Slab', serif;
+            font-size: 18px;
+            font-weight: 700;
+            letter-spacing: 0.9px;
+        }
+        &__list{
+            list-style-type: none;
+            padding-left: 24px;
+            &>li{
+                display: inline-block;
+                font-size: 18px;
+                vertical-align: middle;
+                margin-right: 12px;
+                &>a{
+                    color: $accietn-color;
+                }
+              }
+        }
+    }
+    &-table{
+        flex-basis: 49%;
+       
+        &__list{
+            margin: 0;
+            padding: 0;
+            counter-reset: list;
+            column-count: 2 ;
+            &>li{
+                position: relative;
+
+                padding-left: 36px;
+                counter-increment: list;
+                list-style-type: none;
+                margin-bottom: 8px;
+                letter-spacing: 0.7px;
+                &::before{
+                    content: counter(list) ". ";
+                }
+                &::after{
+                    content: "+";
+                    position: absolute;
+                    left: 0;
+                    font-family: 'Open Sans', serif;
+                    font-size: 15px;
+                    line-height: 22px;
+                    top: 1px;
+                    background-color: $accietn-color;
+                    color: $light-color;
+                    padding: 0px 7px;
+                }
+            }
+        }
+        &__btn{
+            background: linear-gradient(to top left, #65e49c, #65e4af);
+            color: #fff;
+            font-size: 16px;
+            display: inline-block;
+            text-align: center;
+            text-decoration: none;
+            padding: 15px 49px;
+            border: none;
+            margin-top: 35px;
+            box-shadow: 0 -2px #b2f1be inset;
+        }
+    }
+    
+}
+
+.page-books{
+    display: flex;
+    justify-content:space-between;
+    padding: 0px 36px 0 46px;
+    margin-top: 84px;
+    position: relative;
+    &-demo{
+        display: inline-block;
+        background-image: url(../img/book-mini.png);
+        background-repeat: no-repeat;
+        width: 290px;
+        height: 431px;
+       &__title{
+           text-transform: uppercase;
+           color: $light-color;
+           font-size: 24px;
+           text-align: center;
+           padding-top: 48px;
+            padding-left: 14px;
+            letter-spacing: 0.8px;
+             &>span{
+               display: block;
+               color: $accietn-color;
+               text-transform: none;
+               font-size: 10px;
+               margin-top: 6px;
+               letter-spacing: 1.6px;
+            
+           }
+        }
+        &__author{
+             color: $accietn-color;
+             padding-left: 81px;
+             padding-top: 205px;
+             font-size: 11px;
+             letter-spacing: 1px;
+         } 
+       }
+       &-text{
+           display: flex;
+           justify-content: space-around;
+           &-block{
+           
+                display: inline-block;
+                text-align: center;
+                width: 312px;
+                color: #44444f;
+
+                &__title{
+                    font-size: 24px;
+                    font-weight: 600;
+                    &>span{
+                        font-size: 24px;
+                    }
+                }
+                &-button{
+                    background-color: $bg-light-color;
+                    border-style: none;
+                    color: $accietn-color;
+                    text-transform: uppercase;
+                    font-weight: 600;
+                    box-shadow: 0 -2px #b2f1be inset;
+                }
+            }
+       }
+    }
+    
+    .block-blog{
+        display: flex;
+        justify-content: space-between;
+        h4{
+            font-size: 18px;
+        }
+        &-img  {
+            width: 369px;
+            height: 224px;
+            overflow: hidden;
+            position: relative;
+            img{
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+                object-fit: contain;
+            }
+        }
+        &__desc{
+            font-size: 15px;
+            font-family: 'Open sans', serif;
+        }
+        & + .page__btn{
+            display: block;
+            margin: 84px auto 0;
+            padding: 13px 0;
+            max-width: 227px;
+        }
+        &-info{
+            font-size: 15px;
+            a{
+                color: $accietn-color;
+                text-decoration: none;
+            }
+        }
+    }
+
