--- a/src/views/index.html
+++ b/src/views/index.html
@@ -25,6 +25,9 @@
         <link rel="apple-touch-icon" sizes="1024x1024" href="img/favicons/apple-touch-icon-1024x1024.png">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Roboto+Slab:wght@100;400;700&display=swap" rel="stylesheet">        
         <link rel="stylesheet" href="styles/main.css">
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+
+
         <script src="https://kit.fontawesome.com/3fcc916000.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -205,7 +208,7 @@
                     </div>
                     <div class="page-books-text-block">
                         <p class="page-books-text-block__title">
-                            Dare Devils
+                            Daredevils
                         </p>
                         <p class="page-books-text-block__paragraph">
                             Lorem ipsum dolor sit amet, 
@@ -217,6 +220,27 @@
                     </div>
                 </div>
                 <a class="page__btn" href="">Brouse all books</a>
+            </div>
+        </div>
+        <div class="page">
+            <div class="wrap">
+                <div class="block-carousel">
+                    <div>
+                        <h3>Kate Dennings</h3>
+                        <p>Calligraphy Expert</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                    </div>
+                    <div>
+                        <h3>Kate Dennings</h3>
+                        <p>Calligraphy Expert</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                    </div>
+                    <div>
+                        <h3>Kate Dennings</h3>
+                        <p>Calligraphy Expert</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="page">
@@ -273,9 +297,9 @@
                 <div class="block-blog">
                     <div class="block-blog-item">
                         <h2 class="page__title">
-                            Latest from blog
+                            Latest from Blog
                         </h2>
-                        <p class="page__subtitle">
+                        <p class="page-subtitle">
                              Some of the latest     posts from my personal blog
                         </p>
                         <div class="block-blog">
@@ -285,7 +309,7 @@
                                 </div>
                                     <h4>Importance of light in photography</h4>
                                     <div class="block-blog-info"> 
-                                        <p>By<a href=""> Emma Anderson</a></p><span>-</span><a href="">June 20, 2018</a>
+                                        <p class="block-blog__caption">By<a href=""> Emma Anderson</a></p><span>-</span><a href="">June 20, 2018</a>
 
                                     </div>
                                     <p class="block-blog__desc">
@@ -299,7 +323,7 @@
                                 </div>
                                     <h4>The tools you need for the perfection</h4>
                                     <div class="block-blog-info"> 
-                                        <p>By<a href=""> Emma Anderson</a></p><span>-</span><a href="">June 25, 2018</a>
+                                        <p class="block-blog__caption">By<a href=""> Emma Anderson</a></p><span>-</span><a href="">June 25, 2018</a>
 
                                     </div>
                                     <p class="block-blog__desc">
@@ -313,7 +337,7 @@
                                 </div>
                                     <h4>Knowing the difference is important</h4>
                                     <div class="block-blog-info"> 
-                                        <p>By <a href="">Emma Anderson</a></p><span>-</span><a href="">August 22, 2018</a>
+                                        <p class="block-blog__caption">By <a href="">Emma Anderson</a></p><span>-</span><a href="">August 22, 2018</a>
 
                                     </div>
                                     <p class="block-blog__desc">
@@ -329,7 +353,69 @@
                 </div>
             </div>
         </div>
+        <div class="page">
+            <div class="wrap">
+                <div class="block-letter">
+                    <div class="block-letter-item">
+                        <h2 class="block-letter__title">Join Newsletter</h2>
+                        <p class="block-letter__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspen disse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                    </div>
+                    <div class="block-letter-item">
+                        <input class="block-letter__input" type="text" name="" placeholder="Enter your email">
+                        <button class="block-letter__btn">Subscribe</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="wrap">
+                <div class="block-footer">
+                    <div>
+                        <a href="" class="block-footer__logo"></a>
+                        <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+                        </p>
+                        <p>© 2018 Bukee Private Limited.</p>
+                    </div>
+                    <div>
+                        <h2 class="block-footer__title">Useful Links</h2>
+                        <ul class="block-footer__list">
+                            <li>About Bukee</li>
+                            <li>Explore Our Ecosystem</li>
+                            <li>Monthly Community Meetup</li>
+                            <li>Privacy Policy</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h2 class="block-footer__title">Our Contacts</h2>
+                        <ul class="block-footer__list">
+                            <li>Amphitheatre Parkway, CA, 94043</li>
+                            <li>Call us on: +4455663322</li>
+                            <li>Email: support@bukee.mail</li>
+                        </ul>
+                        <ul class="block-footer__social">
+                            <li><a href=""><i class="fab fa-facebook-f"></i></a> </li>
+                            <li><a href=""><i class="fab fa-twitter"></i></a> </li>
+                            <li><a href=""><i class="fab fa-twitch"></i></a> </li>
+                            <li><a href=""><i class="fab fa-youtube"></i></a> </li>
+                            <li><a href=""><i class="fab fa-slack-hash"></i></a> </li>
+                            <li><a href=""><i class="fab fa-whatsapp"></i></a> </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
         <script src="js/main.js"></script>
         <script src="js/vendor.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+        <script>
+                $(document).ready(function(){
+            $('.block-carousel').slick({
+                dots:true,
+                arrows:false,
+            });
+            });
+        </script>
     </body>
 </html>
