--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@ $light-color:#fff;
 $accietn-color:#65e496;
 $bg-light-color:#f5f6fa;
 $bg-dark-color:#44444f;
+$grey-color:#9191b5;
 
 
 
@@ -47,7 +48,8 @@ h3{
         font-size: 48px;
         text-align: center;
         margin-bottom: 25px;
-        letter-spacing: 2px;
+        letter-spacing: 1.9px;
+        
     
     }
     &-subtitle{
@@ -58,7 +60,7 @@ h3{
     }
         &__btn{
         display: block;
-        width: 180px;
+        width: 211px;
         margin: 0 auto;
         background: linear-gradient(to top left, #65e49c, #65e4af);
         border: none;
@@ -449,9 +451,15 @@ h3{
     
     .block-blog{
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
+        margin-top: 85px;
         h4{
             font-size: 18px;
+            margin-top: 15px;
+            letter-spacing: 0.9px;
+        }
+        &-item{
+            margin: 0 16px 0 16px;
         }
         &-img  {
             width: 369px;
@@ -459,6 +467,8 @@ h3{
             overflow: hidden;
             position: relative;
             img{
+                width: 410px;
+                height: 288px;
                 position: absolute;
                 left: 50%;
                 top: 50%;
@@ -471,9 +481,10 @@ h3{
             font-family: 'Open sans', serif;
         }
         & + .page__btn{
+            font-size: 18px;
             display: block;
             margin: 84px auto 0;
-            padding: 13px 0;
+            padding: 13px 30px;
             max-width: 227px;
         }
         &-info{
@@ -483,5 +494,98 @@ h3{
                 text-decoration: none;
             }
         }
+        &__caption{
+            display: inline-block;
+            margin: 0;
+            letter-spacing: 1px;
+        }
     }
-
+.block-letter{
+    display: flex;
+    justify-content: space-between;
+    &__title{
+        font-size: 48px;
+        
+        margin-bottom: 23px;
+        letter-spacing: 1.9px;
+        margin-top: 8px;
+        
+    
+    }
+    &-item{
+        flex-basis: 49%;
+    }
+    &__input{
+        width: 100%;
+        background-color: $bg-dark-color;
+        border: none;
+        color: $grey-color;
+        padding: 15px 27px;
+        box-sizing: border-box;
+        border-radius: 3px;
+        letter-spacing: 0.6px;
+        &:focus{
+            outline: none;
+        }
+       
+    }
+    &__text{
+        font-family: 'Open sans', serif;
+        font-size: 15px;
+        letter-spacing: 0.75px;
+    }
+    &__btn{
+        background: linear-gradient(to top left, #65e49c, #65e4af);
+        color: #fff;
+        font-size: 16px;
+        display: block;
+        text-align: center;
+        text-decoration: none;
+        padding: 15px 49px;
+        border: none;
+        margin-top: 21px;
+        box-shadow: 0 -2px #b2f1be inset;
+        width: 100%;
+        &:focus{
+            outline: none;
+        }
+    }
+}
+.footer{
+     background-color: $bg-dark-color;
+     color: $grey-color;
+     padding: 80px 0;
+}
+.block-footer{
+    display: flex;
+    justify-content: space-between;
+    &>div{
+        flex-basis: 30%;
+    }
+    &__logo {
+        display: block;
+        width: 137px;
+        height: 28px;
+        background-image: url(../img/Logo1.svg);
+    }
+    &__title{
+        font-size: 18px;
+        color: $accietn-color;
+        text-transform: uppercase;
+    }
+    &__list{
+        list-style-type: none;
+        padding-left: 0;
+    }
+    &__social{
+        display: flex;
+        list-style-type: none;
+        padding-left: 0;
+        &>li{
+            margin-right: 10px;
+            &>a{
+                color: $accietn-color;
+            }
+        }
+    }
+}
